--- a/public/index.html
+++ b/public/index.html
@@ -349,25 +349,30 @@
                     Configuração do canal de suporte e comportamento básico do sistema de tickets.
                   </p>
 
-                  <div class="row gap">
-                    <div class="col">
-                      <label for="configTicketChannel" data-i18n="config_ticket_channel">Canal de suporte (tickets)</label>
-                      <select id="configTicketChannel" class="select"></select>
-                      <p class="hint" data-i18n="config_ticket_channel_hint">
-                        Canal onde será publicada a mensagem de suporte com o emoji para abrir tickets.
+                  <details class="card" style="margin-top:12px;" open>
+                    <summary class="details-summary" data-i18n="tickets_config_summary">Configuração</summary>
+                    <div class="row gap" style="margin-top:10px;">
+                      <div class="col">
+                        <label for="configTicketChannel" data-i18n="config_ticket_channel">Canal de suporte (tickets)</label>
+                        <select id="configTicketChannel" class="select"></select>
+                        <p class="hint" data-i18n="config_ticket_channel_hint">
+                          Canal onde será publicada a mensagem de suporte com o emoji para abrir tickets.
+                        </p>
+                      </div>
+                    </div>
+                  </details>
+
+                  <details class="card" style="margin-top:12px;">
+                    <summary class="details-summary" data-i18n="tickets_how_summary">Como funciona</summary>
+                    <div style="margin-top:10px;">
+                      <p class="hint" data-i18n="tickets_extras_info_body">
+                        Quando configuras um canal de suporte, o sistema permite abrir threads de ticket a partir de uma mensagem fixa com o emoji 🎫. Cada ticket fica registado e pode ser consultado na tab de moderação.
+                      </p>
+                      <p class="hint" data-i18n="tickets_extras_logs_hint">
+                        Esta secção utiliza o sistema de logs de tickets existente. Os registos aparecem em "Análises de Tickets" e em "Registos do Servidor" na tab Hub de moderação.
                       </p>
                     </div>
-                  </div>
-
-                  <div class="card" style="margin-top:12px;">
-                    <h3 data-i18n="tickets_extras_info_title">Como funciona</h3>
-                    <p class="hint" data-i18n="tickets_extras_info_body">
-                      Quando configuras um canal de suporte, o sistema permite abrir threads de ticket a partir de uma mensagem fixa com o emoji 🎫. Cada ticket fica registado e pode ser consultado na tab de moderação.
-                    </p>
-                    <p class="hint" data-i18n="tickets_extras_logs_hint">
-                      Esta secção utiliza o sistema de logs de tickets existente. Os registos aparecem em "Análises de Tickets" e em "Registos do Servidor" na tab Hub de moderação.
-                    </p>
-                  </div>
+                  </details>
 
                   <div class="card" style="margin-top:12px;">
                     <div class="users-layout">
@@ -673,7 +678,6 @@
   <script src="/js/dashboard.users.js" defer></script>
   <script src="/js/dashboard.moderation.js" defer></script>
   <script src="/js/dashboard.gamenews.js" defer></script>
-  <script src="/js/dashboard.tickets.js" defer></script>
   <script src="/js/dashboard.tickets.js" defer></script>
 
 <!-- Moderation Action Modal -->
