--- a/public/index.html
+++ b/public/index.html
@@ -585,6 +585,15 @@
                 <p class="hint" data-i18n="config_staff_roles_hint">
                   Se vazio, são usadas as roles de staff globais definidas no ficheiro de configuração.
                 </p>
+
+                <div class="badge-row" style="margin-top: 8px;">
+                  <button type="button" class="btn xs" id="btnStaffPresetApplyGlobal" data-i18n="config_staff_preset_apply_global">
+                    Aplicar a todas as secções
+                  </button>
+                  <button type="button" class="btn xs" id="btnStaffPresetClearOverrides" data-i18n="config_staff_preset_clear_overrides">
+                    Limpar overrides
+                  </button>
+                </div>
               </div>
             </div>
 
